--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ jwt.expiration=86400000
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.example.moodshare.filter=DEBUG
+logging.level.org.example.moodshare=DEBUG
+
+
+logging.level.org.example.moodshare.controller=INFO
+logging.level.org.example.moodshare.service=INFO
+logging.level.org.example.moodshare.repository=WARN
+
+
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
