--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "core-js": "^3.8.3",
     "jwt-decode": "^4.0.0",
     "vue": "^3.2.13",
