可以部署上线

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,12 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <!-- 验证码生成库 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-captcha</artifactId>
+            <version>5.8.22</version>
+        </dependency>
     </dependencies>
 
     <build>
