--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,11 @@ spring.jpa.properties.hibernate.format_sql=true
 
 jwt.expiration=86400000
 
+# Redis 配置
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=2000ms
+
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.example.moodshare.filter=DEBUG
